--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,10 @@
-.home {
+.header {
+   border-bottom: 2px dashed @silver;
+   padding-bottom: 10px;
+   h2{
+     margin-top: 15px;
+   }
+}
 
   .content-section {
     margin: 30px 0;
@@ -58,4 +64,8 @@
       margin-bottom: 30px;
     }
   }
-}// home
+
+  .btn{
+    .custom-btn(@eastern-blue, @white);
+  }
+// home
