--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,16 @@
 // Mixins in here
+
+.custom-btn(@eastern-blue,@white){
+    background-color: @eastern-blue;
+    color: @white;
+    font-size: 1.8rem;
+    text-align: center;
+    border-radius: 20%;
+    margin: 2px 4px 2px 4px;
+    padding: 10px 0;
+
+    &:hover {
+        background-color: @shark;
+        color: @white;
+    }
+}
