--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+
+.nav{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px dashed @silver;
+    margin: 10px 0 0 0;
+    padding-bottom: 10px;
+    h1{
+        margin-left: 20%;
+    }
+    nav {
+        margin-right: 20%;
+        a{
+        text-decoration: none;
+        color: @shark;
+        font-size: 1.4rem;
+        padding: 2.2rem;
+        }
+    }       
+}
