--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,81 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+//Escaping
+@mobile: ~"(max-width: 500px)";
+
+.nav{
+    display:flex;
+    flex-direction: column;
+    h1{
+        margin-right: 20%;
+        
+        nav{
+            margin-left:20%;
+
+
+        }
+    }
+}
+
+.container{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.header{
+    img, h2, p{
+        width: 90%;
+        margin-left: 5%;
+       }
+}
+
+.content-section{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    width: 100%;
+    margin-left: 5%;
+    border: 1px solid black;
+    .text.content{
+        h2, p{
+            width: 90%;
+            margin-left: 5%;
+            border: 1px solid black;
+        }
+
+    }
+    .img-content{
+        width: 90%;
+        margin-left: 5%;
+        border: 1px solid black;
+
+    }
+}
+
+.content-section.inverse-content{
+    display:flex;
+    flex-direction: column-reverse;
+}
+
+.content-destination{
+    width: 100%;
+    margin-left: 5%;
+    border: 1px solid black;
+}
+
+.content-pick{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    border: 1px solid black;
+    .destination{
+        width: 100%;
+        border: 1px solid black;
+    }
+
+}
