--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,10 @@
 .header {
    border-bottom: 2px dashed @silver;
    padding-bottom: 10px;
+   @media @mobile{
+    width: 90%;
+    margin-left: 5%;
+   }
    h2{
      margin-top: 15px;
    }
@@ -12,16 +16,30 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+    @media @mobile{
+      width: 90%;
+      margin-left:5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 90%;
     }
+  }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile {
+        width: 90%;
+      }
+     
+    
 
       img {
         border-radius: 10px;
@@ -29,24 +47,45 @@
     }
   }
 
-  .inverse-content {
+  .content-section.inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile{
+      width:90%;
+      margin-left: 5%;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+    }
 
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+      @media @mobile{
+        width:90%;
+        
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+      @media @mobile{
+        width:90%;
+       
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    
+    @media @mobile{
+      width: 90%;
+      margin-left: 5%;
+    }
 
     img {
       border-radius: 10px;
@@ -59,9 +98,24 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile{
+      width: 90%;
+      margin-left: 5%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 90%;
+        margin-left:5%;
+        padding: 0 10%;
+      }
     }
   }
 
